--- a/desafios/d013/pacote-d013/desafio-13-02.html
+++ b/desafios/d013/pacote-d013/desafio-13-02.html
@@ -8,8 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         table {
-            border-collapse: collapse;
-            width: 300px;
+            width: 400px;
         }
 
         td {
@@ -23,11 +22,7 @@
     <table>
         <tr>
             <td colspan="4">A</td>
-            
             <td rowspan="4">B</td>
-            
-            <td colspan="4" >C</td>
-            <td></td>
         </tr>
         <tr>
             <td rowspan="4">C</td>
@@ -42,9 +37,11 @@
         </tr>
         <tr>
             <td>J</td>
+            <td>K</td>
             <td>L</td>
-            <td>M</td>
-            <td>N</td>
+        </tr>
+        <tr>
+            <td colspan="4">M</td>
         </tr>
     </table>
 </body>
