novo execicio iframe 002

--- a/exercicios/ex024/pag001.html
+++ b/exercicios/ex024/pag001.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas Responsivas</title>
+    <title>Teste de Iframe</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: lightgray;
         }
 
         table {
             border-collapse: collapse;
+        
         }
 
         caption {
@@ -26,7 +28,11 @@
         } 
 
         tr:nth-child(even) {
-            background-color: lightgray;
+            background-color: rgb(238, 115, 115);
+        }
+
+        tr:nth-child(odd) {
+            background-color: white;
         }
 
         div#container {
@@ -35,9 +41,6 @@
     </style>
 </head>
 <body>
-    <h1>Tabelas em telas pequenas</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi tenetur saepe aspernatur, numquam dicta repellendus excepturi! Maiores tempora doloribus modi, nam eveniet nihil esse sint debitis provident odio fugit! Placeat.</p>
-
     <div id="container">
         <table>
             <thead>
