--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -15,13 +15,16 @@
             display: block;
             margin: auto;
         }
+
     </style>
 </head>
 <body>
     <h1>Teste de iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos necessitatibus accusamus nihil rem vel qui, labore praesentium ratione laudantium explicabo. Nisi doloribus rem id doloremque quae, perspiciatis fugiat voluptas? Dignissimos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio repudiandae commodi ducimus cupiditate, molestias consequatur saepe sit? Porro corporis, rerum ipsam eaque atque aliquam aperiam, id aliquid explicabo ex magnam!</p>
 
-    <iframe src="pag001.html" frameborder="0" width="500" height="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="500" height="500">
+        <p>Infelizmente seu navegador não é compativel com isso!</p>
+    </iframe>
     
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis aliquam quam aperiam deleniti nisi nemo laborum et, quia hic cupiditate at, iure fuga, praesentium quas accusamus dolor reprehenderit provident Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure eius at, esse quod voluptatum laborum veniam recusandae assumenda exercitationem quam porro ipsa perspiciatis beatae sint minima aliquid. Pariatur, deleniti reprehenderit!</p>
 </body>
