novo exercicio feito iframe 003

--- a/exercicios/ex024/paginas-extras/pag001.html
+++ b/exercicios/ex024/paginas-extras/pag001.html
@@ -13,7 +13,6 @@
 
         table {
             border-collapse: collapse;
-        
         }
 
         caption {
@@ -36,7 +35,7 @@
         }
 
         div#container {
-            overflow-x: auto;
+            overflow-y: auto;
         }
     </style>
 </head>
@@ -122,21 +121,52 @@
                     <td>11</td>
                     <td>17</td>
                 </tr>
-                    <tr>
-                        <td>Amazon Echo</td>
-                        <td>01</td>
-                        <td>04</td>
-                        <td>07</td>
-                        <td>12</td>
-                        <td>14</td>
-                        <td>10</td>
-                        <td>15</td>
-                        <td>08</td>
-                        <td>10</td>
-                        <td>15</td>
-                        <td>11</td>
-                        <td>17</td>
-                    </tr>
+                <tr>
+                    <td>Amazon Echo</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>14</td>
+                    <td>10</td>
+                    <td>15</td>
+                    <td>08</td>
+                    <td>10</td>
+                    <td>15</td>
+                    <td>11</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>forno</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>14</td>
+                    <td>10</td>
+                    <td>15</td>
+                    <td>08</td>
+                    <td>10</td>
+                    <td>15</td>
+                    <td>11</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>Amazon Barril</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>14</td>
+                    <td>10</td>
+                    <td>15</td>
+                    <td>08</td>
+                    <td>10</td>
+                    <td>15</td>
+                    <td>11</td>
+                    <td>17</td>
+                </tr>
+                    
             </tbody>
         </table>
     </div>
