atualizei e novo exercicio iframe 003

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -31,7 +31,7 @@
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita facere eos autem illum libero sint eaque et modi hic laudantium alias cum, fugit animi odio dolor debitis temporibus error aliquid Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ducimus error pariatur deserunt fugiat, explicabo nobis cum corrupti a assumenda animi excepturi, dicta consequuntur odit ipsam, quae dolores totam. Explicabo?</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo incidunt ipsa aspernatur obcaecati quo voluptatibus assumenda adipisci. Harum, totam nobis deserunt nihil quas dolores enim provident? Dolorem illum officia nesciunt?</p><img src='imagens/tela-youtube.png'>">
         <p>
             Infelizmente seu navegador não é compativel com isso!
         </p>
